--- a/DomainrSharp.Net35/DomainrSharp.Net35.csproj
+++ b/DomainrSharp.Net35/DomainrSharp.Net35.csproj
@@ -5,13 +5,14 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{3C5271EB-E622-4457-91D1-FA9286A0E2CB}</ProjectGuid>
+    <ProjectGuid>{E3508780-ED79-455C-99F1-7DE70B1D606E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DomainrSharp</RootNamespace>
-    <AssemblyName>DomainrSharp</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <RootNamespace>DomainrSharp.Net35</RootNamespace>
+    <AssemblyName>DomainrSharp.Net35</AssemblyName>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -32,29 +33,43 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.4.5.3\lib\net40\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.4.5.3\lib\net35\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DomainrInfoEventArgs.cs" />
-    <Compile Include="SearchResult.cs" />
-    <Compile Include="DomainrInfo.cs" />
-    <Compile Include="DomainrSharpService.cs">
+    <Compile Include="..\DomainrSharp\DomainrInfo.cs">
+      <Link>DomainrInfo.cs</Link>
+    </Compile>
+    <Compile Include="..\DomainrSharp\DomainrInfoEventArgs.cs">
+      <Link>DomainrInfoEventArgs.cs</Link>
+    </Compile>
+    <Compile Include="..\DomainrSharp\DomainrSharpService.cs">
+      <Link>DomainrSharpService.cs</Link>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="..\DomainrSharp\Registrar.cs">
+      <Link>Registrar.cs</Link>
+    </Compile>
+    <Compile Include="..\DomainrSharp\Result.cs">
+      <Link>Result.cs</Link>
+    </Compile>
+    <Compile Include="..\DomainrSharp\SearchResult.cs">
+      <Link>SearchResult.cs</Link>
+    </Compile>
+    <Compile Include="..\DomainrSharp\SearchResultsEventsArgs.cs">
+      <Link>SearchResultsEventsArgs.cs</Link>
+    </Compile>
+    <Compile Include="..\DomainrSharp\Tld.cs">
+      <Link>Tld.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Registrar.cs" />
-    <Compile Include="Result.cs" />
-    <Compile Include="SearchResultsEventsArgs.cs" />
-    <Compile Include="Tld.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
