Added a .NET 4.5 version.

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\DomainrSharp.Net20\packages.config" />
   <repository path="..\DomainrSharp.Net35\packages.config" />
+  <repository path="..\DomainrSharp.Net45\packages.config" />
   <repository path="..\DomainrSharp.Silverlight\packages.config" />
   <repository path="..\DomainrSharp.WindowsPhone\packages.config" />
   <repository path="..\DomainrSharp\packages.config" />
