Added copy commands to be built Updated nuget package

--- a/DomainrSharp.Silverlight/DomainrSharp.Silverlight.csproj
+++ b/DomainrSharp.Silverlight/DomainrSharp.Silverlight.csproj
@@ -108,6 +108,9 @@
       </FlavorProperties>
     </VisualStudio>
   </ProjectExtensions>
+  <PropertyGroup>
+    <PostBuildEvent>XCOPY /D /Y /R "$(TargetPath)" "$(SolutionDir)dlls"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
