--- a/DomainrSharp.Net45/DomainrSharp.Net45.csproj
+++ b/DomainrSharp.Net45/DomainrSharp.Net45.csproj
@@ -75,6 +75,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>XCOPY /D /Y /R "$(TargetPath)" "$(SolutionDir)dlls"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
