Added Task<> methods
includes new method calls for .NET 4.5 and WinRT versions to allow
async/await pattern.

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -5,5 +5,6 @@
   <repository path="..\DomainrSharp.Net45\packages.config" />
   <repository path="..\DomainrSharp.Silverlight\packages.config" />
   <repository path="..\DomainrSharp.WindowsPhone\packages.config" />
+  <repository path="..\DomainrSharp.WinRT\packages.config" />
   <repository path="..\DomainrSharp\packages.config" />
 </repositories>
