--- a/DomainrSharp/packages.config
+++ b/DomainrSharp/packages.config
@@ -1,4 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="4.5.3" />
+  <package id="HttpClient.Compression" version="1.0.0-beta4" targetFramework="portable-win+net403+sl40+wp71" />
+  <package id="Microsoft.Bcl" version="1.0.16-rc" targetFramework="portable-win+net403+sl40+wp71" />
+  <package id="Microsoft.Bcl.Async" version="1.0.14-rc" targetFramework="portable-win+net403+sl40+wp71" />
+  <package id="Microsoft.Bcl.Build" version="1.0.0-rc" targetFramework="portable-win+net403+sl40+wp71" />
+  <package id="Microsoft.Net.Http" version="2.1.3-beta" targetFramework="portable-win+net403+sl40+wp71" />
+  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="portable-win+net403+sl40+wp71" />
+  <package id="Zlib.Portable" version="1.9.2" targetFramework="portable-win+net403+sl40+wp71" />
 </packages>
