Updated readme, given shared httpclient

--- a/DomainrSharp/DomainrSharp.nuspec
+++ b/DomainrSharp/DomainrSharp.nuspec
@@ -15,7 +15,7 @@ using this tokenized nuspec file.
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <version>$version$-beta</version>
-    <authors>$author$</authors>
+    <authors>scott</authors>
     <owners />
     <id>$id$</id>
     <title />
