--- a/DomainrSharp/DomainrSharp.nuspec
+++ b/DomainrSharp/DomainrSharp.nuspec
@@ -14,7 +14,7 @@ using this tokenized nuspec file.
 -->
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
-    <version>$version$-beta</version>
+    <version>$version$</version>
     <authors>scott</authors>
     <owners />
     <id>$id$</id>
