--- a/DomainrSharp/packages.config
+++ b/DomainrSharp/packages.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Fody" version="1.13.8.0" targetFramework="portable-net403+sl40+wp71+win" />
-  <package id="Microsoft.Bcl" version="1.1.0-beta" targetFramework="portable-net403+sl40+wp71+win" />
+  <package id="Fody" version="1.13.12" targetFramework="portable-net403+sl40+wp71+win" />
+  <package id="Microsoft.Bcl" version="1.1.3" targetFramework="portable-net403+sl40+wp71+win" />
   <package id="Microsoft.Bcl.Async" version="1.0.16" targetFramework="portable-net403+sl40+wp71+win" />
   <package id="Microsoft.Bcl.Build" version="1.0.7" targetFramework="portable-net403+sl40+wp71+win" />
-  <package id="Microsoft.Net.Http" version="2.2.3-beta" targetFramework="portable-net403+sl40+wp71+win" />
+  <package id="Microsoft.Net.Http" version="2.2.13" targetFramework="portable-net403+sl40+wp71+win" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="portable-net403+sl40+wp71+win" />
-  <package id="PropertyChanged.Fody" version="1.38.7.0" targetFramework="portable-net403+sl40+wp71+win" />
+  <package id="PropertyChanged.Fody" version="1.39.0.0" targetFramework="portable-net403+sl40+wp71+win" />
 </packages>
